--- a/force-app/main/default/lwc/speedTest/speedTest.html
+++ b/force-app/main/default/lwc/speedTest/speedTest.html
@@ -1,6 +1,7 @@
 <template>
     <lightning-card title = "Installation Certificate Form">
         <lightning-button label="Speed Test" onclick={handleSpeedTestClick}></lightning-button>
+        
         <template if:true={showSpeedTest}>
             <div class="slds-modal slds-fade-in-open">
                 <div class="slds-modal__container">
@@ -11,7 +12,7 @@
             </div>
             <div class="slds-backdrop slds-backdrop_open"></div>
         </template>
-        <lightning-input label="Download Speed (Kbps)" value={downloadSpeed} read-only></lightning-input>
-        <lightning-input label="Upload Speed (Kbps)" value= {uploadSpeed} read-only></lightning-input>
+        <lightning-input label="Download Speed (Kbps)" value={downloadSpeed} readonly></lightning-input>
+        <lightning-input label="Upload Speed (Kbps)" value={uploadSpeed} readonly></lightning-input>
     </lightning-card>
 </template>
