--- a/force-app/main/default/lwc/speedTest/speedTest.html
+++ b/force-app/main/default/lwc/speedTest/speedTest.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title = "Installation Certificate Form">
+    <lightning-card title="Run Test">
         <lightning-button label="Speed Test" onclick={handleSpeedTestClick}></lightning-button>
         
         <template if:true={showSpeedTest}>
